# sculpt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ablation_session_notes.md  pyproject.toml  run_engine.py  setup.py  update_readmes.sh
blog_assets/: summary_table.md
configs/: default.yaml
data/: downstream_benchmarks.jsonl  dystrio_efficiency_dataset.jsonl  efficiency_dataset.jsonl  eval_configs.json  eval_results.json  zoo_ab_consolidated.jsonl
data/bench_llama/: benchmarks.csv
data/bench_mistral/: benchmarks.csv
drafts/: reddit_localllama_launch.md
experiments/: multilayer_experiment.py  vllm_benchmark.py
scripts/: ablation_study.sh  bench_prefix_cache.py  bench_server_prefix.py  bench_serving.py  benchmark_moe_routing.py  bootstrap_ablation_box.sh  collect_and_push.py  collect_blog_data.py  compare_distill_ab.py  compare_selectors_local.py  compile_and_push_minicpmo.py  complete_baselines.sh  consolidate_dataset.py  diagnose_moe_cache.py  eval_ab_distill.sh  eval_tiers.sh  factory.py  fix_missing_weights.py  fix_patched_hf_repo.py  generate_blog_charts.py  head_to_head_bench.sh  make_prompt_packs.py  model_card_template.md  patch_readmes.py  plot_frontier.py  provision_a100.sh  provision_cohesion_proof.sh  provision_fp8_cacheready.sh  provision_minicpmo_sculpt.sh  provision_moe_benchmark.sh  provision_moe_patch.sh  provision_olmoe_expert_prune.sh  provision_qwen35_moe_expert_prune.sh  provision_qwen_selector_ablation.sh  provision_starcoder2_15b.sh  push_baselines_to_dataset.py  push_benchmark_dataset.py  push_efficiency_dataset.py  push_fp8_model_card.py  push_model_card.py  (+14 more)
tests/: test_bench.py  test_best_checkpoint_restore.py  test_calib.py  test_cohesion_selector.py  test_deterministic_subset.py  test_emit_reload_forward.py  test_engine_contract.py  test_logging.py  test_minicpm_adapter.py  test_moe_adapter.py  test_multilayer_cli.py  test_pilot_tuner.py  test_risk_and_search.py  test_routing_patch.py  test_starcoder2_adapter.py
(+65 files in other folders)
